--- a/chrome extension/popup.html
+++ b/chrome extension/popup.html
@@ -28,11 +28,12 @@
 
 		<div id="codeList" style="max-height: 80px; min-height: 80px; overflow: scroll; overflow-x: hidden;color: white; font-family: Candara, sans-serif; font-size: 130%; margin-top: 15px; margin-left: 18px"></div>
 
-    	<textarea id="textArea" rows="1" cols="15" style="margin-top: 10px; resize: none; text-align: center"></textarea>
+		<div style="display: inline-flex; margin-top: 10px; margin-bottom: 5px">
+	    	<textarea id="textArea" rows="1" cols="10" style="resize: none; text-align: center"></textarea>
+	    	
+	    	<button id="addCode" style="background: #77CC77;"><strong>Ekle</strong></button>
+    	</div>
 
-    	<br>
-    	<button id="addCode" style="background: #77CC77;"><strong>Ekle</strong></button>
-		<br>
 		<hr>
 		<button id="fetchPrices" style="text-align: center;  width: 100px; font-family: Candara, sans-serif; background: #22AAFF;"><strong>Fiyatları Bul</strong></button>
 	</body>
