--- a/chrome extension/popup.html
+++ b/chrome extension/popup.html
@@ -33,28 +33,24 @@
 		<h1 style="font-size:140%; font-family: Arial, Helvetica, sans-serif; color: white; text-align: center">Güncel Fiyatlar</h1>
 		<hr>
 
-		<!--fieldset-->
-    	<legend style="font-size:110%; font-family: Arial, Helvetica, sans-serif; color: white; text-align: center"><strong></strong></legend-->
-			
-		<!--input type="radio" id="hisse" name="choice">
-		<label for="hisse">Hisseler</label><br>
-		<input type="radio" id="fon" name="choice">
-		<label for="fon">Fonlar</label-->
+	    <legend style="font-size:110%; font-family: Arial, Helvetica, sans-serif; color: white; text-align: center"><strong></strong></legend-->
 
+	    <!-- Buttons that let the user select which list they want to see/edit -->
 		<button id="hisseler" style="text-align: center;  width: 60px; font-family: Candara, sans-serif; background: #22AAFF;"><strong>Hisseler</strong></button>
 		<button id="fonlar" style="text-align: center;  width: 60px; font-family: Candara, sans-serif; background: #808080;"><strong>Fonlar</strong></button>
 
-		<div id="hisseCodeList" style="display: block; max-height: 80px; min-height: 80px; overflow: scroll; overflow-x: hidden;color: white; font-family: Candara, sans-serif; font-size: 130%; margin-top: 15px; margin-left: 18px"></div>
-		<div id="fonCodeList" style="display: none; max-height: 80px; min-height: 80px; overflow: scroll; overflow-x: hidden;color: white; font-family: Candara, sans-serif; font-size: 130%; margin-top: 15px; margin-left: 18px"></div>
+		<!-- Dynamic lists that display the buttons -->
+		<div id="hisseCodeList" style="display: block; max-height: 80px; min-height: 80px; overflow: scroll; overflow-x: hidden; color: white; font-family: Candara, sans-serif; font-size: 130%; margin-top: 15px; margin-left: 18px"></div>
+		<div id="fonCodeList" style="display: none; max-height: 80px; min-height: 80px; overflow: scroll; overflow-x: hidden; color: white; font-family: Candara, sans-serif; font-size: 130%; margin-top: 15px; margin-left: 18px"></div>
 
-    	<!--/fieldset-->
-
+		<!-- This text area is where the user input is taken and the button allows the input to be transfered to the program -->
 		<div style="display: inline-flex; margin-top: 10px; margin-bottom: 5px">
-		   	<textarea id="textArea" rows="1" cols="10" style="resize: none; text-align: center"></textarea>   
-		    <button id="addCode" style="background: #77CC77;"><strong>Ekle</strong></button>
-	    </div>
+		  <textarea id="textArea" rows="1" cols="15" style="resize: none; text-align: center" placeholder="Eklenecek kodlar"></textarea>
+		  <button id="addCode" style="background: #77CC77;"><strong>Ekle</strong></button>
+		</div>
 
 		<hr>
+		<!-- Starts running the program with the values in the lists -->
 		<button id="fetchPrices" style="text-align: center;  width: 100px; font-family: Candara, sans-serif; background: #22AAFF;"><strong>Fiyatları Bul</strong></button>
 	</body>
 </div>
